release 2211-v6